cmake_minimum_required(VERSION 3.23)
project(algorithm C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(C18.c C18.c)
add_executable(C19 C19.c)
add_executable(C20 C20.c)
add_executable(C21 C21.c)
add_executable(C22 C22.c)
add_executable(C23 C23.c)
add_executable(C24 C24.c)
add_executable(C25 C25.c)
add_executable(26 C26.c)
add_executable(27 C27.c)
add_executable(C28 C28.c)
add_executable(C29 C29.c)
add_executable(C30.c C30.c)
